musl/issues/bgms.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'bgms' ...
** this is package 'bgms' version '0.1.6.3'
** package 'bgms' successfully unpacked and MD5 sums checked
** using staged installation
** libs
specified C++20
using C++ compiler: 'g++ (Alpine 15.2.0) 15.2.0'
using C++20
make[1]: Entering directory '/var/local/PKGS/CRAN/bgms/src'
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgm/bgm_helper.cpp -o bgm/bgm_helper.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgm/bgm_logp_and_grad.cpp -o bgm/bgm_logp_and_grad.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgm/bgm_sampler.cpp -o bgm/bgm_sampler.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgmCompare/bgmCompare_helper.cpp -o bgmCompare/bgmCompare_helper.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgmCompare/bgmCompare_logp_and_grad.cpp -o bgmCompare/bgmCompare_logp_and_grad.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgmCompare/bgmCompare_sampler.cpp -o bgmCompare/bgmCompare_sampler.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgmCompare_interface.cpp -o bgmCompare_interface.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c bgm_interface.cpp -o bgm_interface.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c math/custom_exp.cpp -o math/custom_exp.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c math/e_exp.cpp -o math/e_exp.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mcmc/mcmc_hmc.cpp -o mcmc/mcmc_hmc.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mcmc/mcmc_leapfrog.cpp -o mcmc/mcmc_leapfrog.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mcmc/mcmc_nuts.cpp -o mcmc/mcmc_nuts.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mcmc/mcmc_rwm.cpp -o mcmc/mcmc_rwm.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mcmc/mcmc_utils.cpp -o mcmc/mcmc_utils.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mrf_prediction.cpp -o mrf_prediction.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DARMA_NO_DEBUG -I. -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I'/home/runner/R-patched/lib/dqrng/include' -I'/home/runner/R-patched/lib/BH/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c mrf_simulation.cpp -o mrf_simulation.o
mrf_simulation.cpp: In function 'Rcpp::List run_simulation_parallel(const arma::mat&, const arma::mat&, const arma::ivec&, int, int, const arma::ivec&, const Rcpp::StringVector&, const arma::ivec&, int, int, int, int)':
mrf_simulation.cpp:454:5: error: 'tbb' has not been declared
  454 |     tbb::global_control control(tbb::global_control::max_allowed_parallelism, nThreads);
      |     ^~~
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:199: mrf_simulation.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/CRAN/bgms/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/bgms/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/bgms/src'
ERROR: compilation failed for package 'bgms'
* removing '/home/runner/R-patched/lib/bgms'
